<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="17dp"
    tools:context="com.example.meghabajaj.womanhackathon.BookmarksActivity">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Breakfast"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="lunch"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Snack"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dinner"
            android:textAllCaps="true"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:layout_marginTop="10dp"

        >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_1_1"
            />
        <TextView
            android:id="@+id/textView6"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_1_2"
            />
        <TextView
            android:id="@+id/textView7"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_1_3"
            />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_1_4"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:layout_marginTop="10dp"

        >
        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_2_1"
            />
        <TextView
            android:id="@+id/textView10"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_2_2"
            />
        <TextView
            android:id="@+id/textView11"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_2_3"
            />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_2_4"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:layout_marginTop="10dp"

        >
        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_3_1"
            />
        <TextView
            android:id="@+id/textView14"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_3_2"
            />
        <TextView
            android:id="@+id/textView15"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_3_3"
            />
        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_3_4"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:layout_marginTop="10dp"

        >
        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_4_1"
            />
        <TextView
            android:id="@+id/textView18"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_4_2"
            />
        <TextView
            android:id="@+id/textView19"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_4_3"
            />
        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_4_4"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"

        >
        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_5_1"
            />
        <TextView
            android:id="@+id/textView22"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_5_2"
            />
        <TextView
            android:id="@+id/textView23"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_5_3"
            />
        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_5_4"
            />

    </TableRow>

</TableLayout>
</ScrollView>