<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        tools:context="com.example.meghabajaj.womanhackathon.searchActivity">
    <!--<searchable-->
        <!--android:label="PregaHelp"-->
        <!--android:hint="Search PinCode"-->
        <!--android:searchSuggestAuthority="dictionary"-->
        <!--android:searchSuggestIntentAction="android.intent.action.VIEW"-->
        <!--android:includeInGlobalSearch="true">-->
    <!--</searchable>-->
        <ProgressBar
            android:id="@+id/search_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/details_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/details_form_for_doctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="Add Details"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_horizontal_margin" />

                <EditText
                    android:id="@+id/name_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/name"
                    android:inputType="textPersonName"/>
                <EditText
                    android:id="@+id/phone_search"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:inputType="phone" />
                <EditText
                    android:id="@+id/street_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/street_name"
                    android:inputType="textPostalAddress"/>
                <EditText
                    android:id="@+id/state_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state_name"
                    android:inputType="textPostalAddress"/>
                <EditText
                    android:id="@+id/pincode_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/pincode_name"
                    android:inputType="textPostalAddress" />
                <EditText
                    android:id="@+id/type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/occupation_type"
                    android:textAllCaps="true"
                    android:inputType="textPersonName"/>
                <Button
                    android:id="@+id/add_details_button"
                    android:background="@color/colorAccent"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="25dp"
                    android:text="ADD"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@null"
                    android:text="Go back to previous page"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>